fix(Collapsible) remove flex align since its breaking layout if we have a lot of text

--- a/sass/components/_collapsible.scss
+++ b/sass/components/_collapsible.scss
@@ -32,7 +32,6 @@
 
 .collapsible-header::after {
   content: '\e5cf';
-  align-self: flex-end;
   margin-left: .5rem;
   font-family: 'Material Symbols Outlined', 'Material Symbols Rounded', 'Material Symbols Sharp', 'Material Icons';
   font-size: 25px;
